@@ -750,6 +750,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-6682. Add a metric to expose the timestamp of the oldest
     under-replicated block. (aajisaka)
 
+    HDFS-8735. Inotify: All events classes should implement toString() API.
+    (Surendra Singh Lilhore via aajisaka)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
